# QUALYPY

./: README.md  pyproject.toml  setup.cfg
src/: QUALYPY.py  __init__.py  __release.py
