[build-system]
requires = ["setuptools >= 77.0.3","pybind11>=2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "QUALYPY"
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy",
]
requires-python = ">=3.10"
authors = [
  {name = "Guillaume Evin", email = "guillaume.evin@inrae.fr"},
]
maintainers = [
  {name = "Guillaume Evin", email = "guillaume.evin@inrae.fr"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
classifiers = [
  "Development Status :: 1 - First version",
  "Natural Language :: English",
  "Operating System :: Windows :: Windows 11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Climate"
]